Fixed the Contexts